<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.putrosw.touristpartner.fragment.EditFragment">

<!--    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:alpha="0.3"
        android:src="@drawable/ic_settings_black_24dp" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:hint="@string/hint_firstname"
                android:id="@+id/text_firstname"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:hint="@string/hint_lastname"
                android:id="@+id/text_lastname"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <!--<android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:hint="@string/hint_date_of_birth"
                android:id="@+id/text_date_of_birth"
                android:imeOptions="actionNext"
                android:inputType="date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>-->


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:hint="@string/hint_nick_name"
                android:id="@+id/text_nickname"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <!--<View
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_vertical_margin" />-->

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/update_profile"/>
        <!-- android:onClick="handleUpdateProfile" -->

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_vertical_margin" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:hint="@string/hint_password_old"
                android:id="@+id/text_password_old"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:hint="@string/hint_password_new"
                android:id="@+id/text_password_new"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:hint="@string/hint_password_confirm"
                android:id="@+id/text_password_confirm"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_vertical_margin" />

        <Button
            android:id="@+id/btnChgPswrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:text="@string/change_password"/>

    </LinearLayout>

</ScrollView>